code/ui/HUD.scss
RootPanel {
    display: flex;
    cursor: default;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: #151515;
    pointer-events: all;
    flex-direction: row;
    justify-content: center;
    justify-items: center;
    align-items: center;
    align-content: stretch;
    flex-wrap: nowrap;
    padding: 0px 50px 0px 50px;

    .sidebar {
        flex-direction: column;
        flex-grow: 0;
        flex-shrink: 0;
        width: 660px;
        justify-content: center;
        position: relative;

        .title {
            aspect-ratio: 5;
            justify-content: center;
            align-items: center;

            label {
                font-family: poxel-font;
                font-size: 100px;
                color: white;
            }
        }

        .patterns {
            flex-direction: column;
            height: 500px;
            border: 3px solid white;
            justify-content: flex-start;
            border-radius: 20px 20px 0px 0px;

            .patternstitle {
                width: 100%;
                flex-shrink: 0;
                padding: 5px 0px 5px 0px;
                border-bottom: 2px solid white;
                justify-content: center;
                background-color: #1f1c2b;
                border-radius: 20px 20px 0px 0px;

                label {
                    font-family: poxel-font;
                    font-size: 40px;
                    color: white;
                }
            }

            .patterncontainer {
                align-self: center;
                justify-content: center;
                flex-wrap: wrap;
                overflow: scroll;
                margin: 5px;

                .pattern {
                    height: 150px;
                    width: 180px;
                    margin: 10px;
                    border: 3px solid white;
                    border-radius: 20px;
                    align-items: flex-end;

                    .name {
                        height: 35px;
                        width: 100%;
                        background-color: #1f1c2b;
                        border-top: 2px solid white;
                        border-radius: 0px 0px 20px 20px;
                        justify-content: center;
                        align-items: center;

                        label {
                            font-family: poxel-font;
                            font-size: 20px;
                            color: white;
                        }
                    }
                }
            }
        }

        .chat {
            flex-direction: row;
            flex-grow: 0;
            flex-shrink: 1;
            height: 40%;
            border: 3px solid white;
            border-top: 0px;
            border-radius: 0px 0px 20px 20px;
        }
    }



    .tools {
        flex-direction: column;
        flex-grow: 0;
        flex-shrink: 0;
        width: 150px;
        justify-content: space-around;
        align-items: center;
        padding: 200px 0px 200px 0px;

        .buttons {
            cursor: pointer;
            color: white;
            border: 2px solid white;
            border-radius: 15px;
            height: 85px;
            width: 100px;
            justify-content: center;
            mix-blend-mode: color;

            .play {
                font-size: 55px;
                font-family: Arial;
                color: white;
                padding-right: 2px;
            }

            .next {
                font-size: 45px;
                font-family: Arial;
                color: white;
                padding-top: 6px;
                padding-right: 3px;
            }

            .clear {
                font-size: 43px;
                font-family: Arial;
                color: white;
                padding-top: 7px;
                padding-right: 3px;
            }

            .loop {
                font-size: 40px;
                font-family: Arial;
                color: white;
                padding-top: 9px;
                padding-right: 4px;
            }

            .cross {
                font-size: 47px;
                font-family: Arial;
                color: white;
                position: absolute;
                top: 5px;
                left: 28px;
            }

            .speed {
                font-size: 35px;
                font-weight: 700;
                font-family: Arial;
                color: white;
                padding-right: 7px;
                padding-top: 13px;
            }

            &:hover {
                background-color: #301B3F;
            }

            &.active, &:active {
                background-color: #3C415C;
            }
        }
    }

    .grid {
        cursor: crosshair; //crosshair
        flex-grow: 0;
        flex-shrink: 0;
        aspect-ratio: 1;
        height: 90%;
        align-self: center;
        background-color: #202224;
        border: 3px solid white;

        .cell {
            background-color: none;
            width: 13%;
            aspect-ratio: 1;
            left: 0px;
            top: 0px;
        }

        &.block {
            cursor: default;
        }
    }
}

chatbox {
    z-index: 100;
    flex-direction: column;
    width: 100%;
    font-family: Poxel-Font;
    font-size: 18px;
    justify-content: flex-end;
    justify-items: flex-end;

    .textentry {
        opacity: 0.5;
        color: darkgray;
        padding: 15px 20px 15px 20px;
        margin-top: 5px;
        font-size: 18px;
        flex-shrink: 0;
        flex-grow: 0;
        width: 100%;
        background-color: #1f1c2b;
        border-radius: 0px 0px 20px 20px;
        pointer-events: none;
    }

    .chat_canvas {
        flex-direction: column;
        justify-content: flex-start;
        overflow: scroll;
    }

    &.open {
        textentry {
            opacity: 1;
            color: white;
        }
    }
}

chatentry {
    margin-bottom: 5px;
    color: white;
    opacity: 1;
    min-height: 26px;
    flex-shrink: 0;
    flex-grow: 0;
    padding: 3px 20px 3px 20px;
    max-width: 100%;

    .name {
        padding-right: 10px;
        font-weight: 600;
        font-size: 18px;
        color: #BAC23D;
        flex-shrink: 0;
    }

    .message {
        color: #ccc;
        font-size: 18px;
        flex-shrink: 0;
    }

    .button {
        color: #BAC23D;
        font-size: 18px;
        font-weight: bold;
        flex-shrink: 0;

    }

    .multiplier {
        color: #8E942F;
        font-size: 18px;
        flex-shrink: 0;
    }

    &.noname .name {
        display: none;
    }
}

